--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,6 +107,7 @@ endif()
 
 find_package(ZLIB REQUIRED)
 if (ZLIB_FOUND)
+    message(STATUS "Found ZLib...")
     include_directories(SYSTEM ${ZLIB_INCLUDE_DIR})
     set(LIBS ${LIBS} ${ZLIB_LIBRARY_DIR})
 endif()
