cmake: use new single binary for all generation targets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -369,7 +369,7 @@ add_dependencies(rat run_all_tests)
 add_custom_target(rebase)
 add_custom_target(diff)
 
-if (DOGEN_KNITTER_EXECUTABLE)
+if (DOGEN_CLI_EXECUTABLE)
     add_custom_target(knit_all_dia)
     add_custom_target(knit_all_json)
     add_custom_target(ka)
@@ -382,7 +382,7 @@ if (DOGEN_STITCHER_EXECUTABLE)
     add_dependencies(sa stitch_all)
 endif()
 
-if (DOGEN_KNITTER_EXECUTABLE AND DOGEN_STITCHER_EXECUTABLE)
+if (DOGEN_CLI_EXECUTABLE AND DOGEN_STITCHER_EXECUTABLE)
     add_custom_target(knit_and_stitch)
     add_dependencies(knit_and_stitch knit_all_dia)
     add_dependencies(knit_and_stitch stitch_all)
