--- a/projects/masd.dogen.models/json/CMakeLists.txt
+++ b/projects/masd.dogen.models/json/CMakeLists.txt
@@ -19,7 +19,7 @@
 set(frontend "json")
 set(models_dir "${CMAKE_CURRENT_SOURCE_DIR}")
 
-if (DOGEN_KNITTER_EXECUTABLE)
+if (DOGEN_CLI_EXECUTABLE)
     foreach(model ${models})
         set(target ${model})
         set(target_ext ${target}.${frontend})
@@ -27,7 +27,7 @@ if (DOGEN_KNITTER_EXECUTABLE)
         add_custom_target(knit_${target_ext}
             COMMENT "Knitting ${target_ext} model" VERBATIM
             WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-            COMMAND ${DOGEN_KNITTER_EXECUTABLE}
+            COMMAND ${DOGEN_CLI_EXECUTABLE}
             --target ${target_path} ${common_arguments})
         add_dependencies(knit_all_${frontend} knit_${target_ext})
 
@@ -37,7 +37,7 @@ if (DOGEN_KNITTER_EXECUTABLE)
                 WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
                 COMMAND ${benchmark_command} ${benchmark_repeats}
                 ${benchmark_directory}/${benchmark_prefix}${target}.csv
-                ${DOGEN_KNITTER_EXECUTABLE} --target ${target_path}
+                ${DOGEN_CLI_EXECUTABLE} --target ${target_path}
                 ${common_arguments})
             add_dependencies(benchmark_${frontend}
                 benchmark_knit_${target_ext})
