--- a/projects/masd.dogen.models/dia/CMakeLists.txt
+++ b/projects/masd.dogen.models/dia/CMakeLists.txt
@@ -19,26 +19,26 @@
 set(frontend "dia")
 set(models_dir "${CMAKE_CURRENT_SOURCE_DIR}")
 
-if (DOGEN_KNITTER_EXECUTABLE)
+if (DOGEN_CLI_EXECUTABLE)
     foreach(model ${models})
         set(target ${model})
         set(target_ext ${target}.${frontend})
         set(target_path ${models_dir}/${target_ext})
         message(STATUS knit_${target_ext})
         add_custom_target(knit_${target_ext}
-            COMMENT "Knitting ${target_ext} model" VERBATIM
+            COMMENT "Generating ${target_ext} model" VERBATIM
             WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-            COMMAND ${DOGEN_KNITTER_EXECUTABLE}
+            COMMAND ${DOGEN_CLI_EXECUTABLE} generate
             --target ${target_path} ${common_arguments})
         add_dependencies(knit_all_${frontend} knit_${target_ext})
 
         if (WITH_BENCHMARKS)
             add_custom_target(benchmark_knit_${target_ext}
-                COMMENT "Benchmarking knitting ${target_ext} model" VERBATIM
+                COMMENT "Benchmarking generation of  ${target_ext} model" VERBATIM
                 WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
                 COMMAND ${benchmark_command} ${benchmark_repeats}
                 ${benchmark_directory}/${benchmark_prefix}${target}.csv
-                ${DOGEN_KNITTER_EXECUTABLE} --target ${target_path}
+                ${DOGEN_CLI_EXECUTABLE} generate --target ${target_path}
                 ${common_arguments})
             add_dependencies(benchmark_${frontend}
                 benchmark_knit_${target_ext})
