cmake: update tailor targets to use conversion command

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -372,29 +372,24 @@ add_custom_target(diff)
 if (DOGEN_CLI_EXECUTABLE)
     add_custom_target(generate_all_dia)
     add_custom_target(generate_all_json)
-    add_custom_target(ga)
-    add_dependencies(ga generate_all_dia)
-endif()
+    add_custom_target(gad)
+    add_dependencies(gad generate_all_dia)
+    add_custom_target(gaj)
+    add_dependencies(gaj generate_all_json)
 
-if (DOGEN_STITCHER_EXECUTABLE)
-    add_custom_target(stitch_all)
-    add_custom_target(sa)
-    add_dependencies(sa stitch_all)
-endif()
+    add_custom_target(weave_all)
+    add_custom_target(wa)
+    add_dependencies(wa weave_all)
 
-if (DOGEN_CLI_EXECUTABLE AND DOGEN_STITCHER_EXECUTABLE)
-    add_custom_target(generate_and_stitch)
-    add_dependencies(generate_and_stitch generate_all_dia)
-    add_dependencies(generate_and_stitch stitch_all)
-    add_custom_target(kas)
-    add_dependencies(kas generate_and_stitch)
-endif()
+    add_custom_target(generate_and_weave)
+    add_dependencies(generate_and_weave generate_all_dia)
+    add_dependencies(generate_and_weave weave_all)
+    add_custom_target(gaw)
+    add_dependencies(gaw generate_and_weave)
 
-
-if (DOGEN_TAILOR_EXECUTABLE)
-    add_custom_target(tailor_all)
-    add_custom_target(ta)
-    add_dependencies(ta tailor_all)
+    add_custom_target(convert_all)
+    add_custom_target(ca)
+    add_dependencies(ca convert_all)
 endif()
 
 if (WITH_JSON_VALIDATION)
