--- a/test_data/CMakeLists.txt
+++ b/test_data/CMakeLists.txt
@@ -120,7 +120,7 @@ if (DOGEN_CLI_EXECUTABLE)
             add_custom_target(convert_${model_name}
                 COMMENT "Converting ${model_name}."
                 WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-                COMMAND echo ${DOGEN_CLI_EXECUTABLE} convert
+                COMMAND ${DOGEN_CLI_EXECUTABLE} convert
                 --log-enabled --log-level=${DOGEN_LOG_LEVEL}
                 --source ${sample} --destination ${output_dir}/${model_name}.json)
             add_dependencies(convert_all convert_${model_name})
