--- a/projects/masd.dogen.generation.csharp/src/CMakeLists.txt
+++ b/projects/masd.dogen.generation.csharp/src/CMakeLists.txt
@@ -46,7 +46,7 @@ if (DOGEN_CLI_EXECUTABLE)
         COMMENT "Weaving ${lib_target_name}" VERBATIM
         WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
         COMMAND ${DOGEN_CLI_EXECUTABLE} weave ${other_options}
-        --target ${CMAKE_CURRENT_SOURCE_DIR}/)
+        --target ${CMAKE_SOURCE_DIR}/projects/${name})
     add_dependencies(weave_all weave_${lib_target_name})
 endif()
 
