cli: fix bugs with tracing
- catch parsing exceptions we ourselves throw to provide feedback to
  users about errors.
- fix problems parsing command line options related to tracing.
- fix typo on guid enablement in tracing.

--- a/projects/masd.dogen.models/CMakeLists.txt
+++ b/projects/masd.dogen.models/CMakeLists.txt
@@ -83,8 +83,10 @@ if (DOGEN_CLI_EXECUTABLE)
     set(common_arguments ${common_arguments} ${other_options})
 
     # uncomment to enable tracing.
-    # set(common_arguments ${common_arguments} "--probe-all")
-    # set(common_arguments ${common_arguments} "--probe-stats-org-mode")
+    # set(common_arguments ${common_arguments} --tracing-enabled)
+    # set(common_arguments ${common_arguments} --tracing-level detail)
+    # set(common_arguments ${common_arguments} --tracing-format org-mode)
+    # set(common_arguments ${common_arguments} --tracing-guids-enabled)
 
     # main input models
     set(prefix "masd.dogen")
