--- a/projects/masd.dogen.models/dia/CMakeLists.txt
+++ b/projects/masd.dogen.models/dia/CMakeLists.txt
@@ -29,17 +29,18 @@ if (DOGEN_CLI_EXECUTABLE)
             COMMENT "Generating ${target_ext} model" VERBATIM
             WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
             COMMAND ${DOGEN_CLI_EXECUTABLE} generate
-            --target ${target_path} ${common_arguments})
+            --target ${target_path} ${DOGEN_COMMON_OPTIONS}
+            ${DOGEN_GENERATION_OPTIONS})
         add_dependencies(generate_all_${frontend} generate_${target_ext})
 
         if (WITH_BENCHMARKS)
             add_custom_target(benchmark_generate_${target_ext}
-                COMMENT "Benchmarking generation of  ${target_ext} model" VERBATIM
-                WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+                COMMENT "Benchmarking generation of  ${target_ext} model"
+                VERBATIM WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
                 COMMAND ${benchmark_command} ${benchmark_repeats}
                 ${benchmark_directory}/${benchmark_prefix}${target}.csv
                 ${DOGEN_CLI_EXECUTABLE} generate --target ${target_path}
-                ${common_arguments})
+                ${DOGEN_COMMON_OPTIONS} ${DOGEN_GENERATION_OPTIONS})
             add_dependencies(benchmark_${frontend}
                 benchmark_generate_${target_ext})
         endif()
