cmake: simplify json targets, making them easier to remember

--- a/projects/masd.dogen.models/CMakeLists.txt
+++ b/projects/masd.dogen.models/CMakeLists.txt
@@ -28,27 +28,25 @@ if (WITH_JSON_VALIDATION)
         "${CMAKE_CURRENT_SOURCE_DIR}/${input_dir}/*.json")
 
     set(target "models.json")
-    add_custom_target(validate_json_${target})
-    add_dependencies(validate_all_json validate_json_${target})
+    add_custom_target(validate_${target})
+    add_dependencies(validate_all_json validate_${target})
 
-    add_custom_target(indent_json_${target})
-    add_dependencies(indent_all_json indent_json_${target})
+    add_custom_target(indent_${target})
+    add_dependencies(indent_all_json indent_${target})
 
     foreach(file ${files})
-        add_custom_target(validate_json_${target}_${file}
+        add_custom_target(validate_${file}
             COMMENT "Validating JSON for ${target}/${file}."
             WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
             COMMAND ${JQ_COMMAND} . ${folder}/${file} > /dev/null)
-        add_dependencies(validate_json_${target}
-            validate_json_${target}_${file})
+        add_dependencies(validate_${target} validate_${file})
 
-        add_custom_target(indent_json_${target}_${file}
+        add_custom_target(indent_${file}
             COMMENT "Indenting JSON for ${target}/${file}."
             WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
             COMMAND ${JQ_COMMAND} . ${folder}/${file} > ${folder}/${file}_tmp
             COMMAND mv ${folder}/${file}_tmp ${folder}/${file})
-        add_dependencies(indent_json_${target}
-            indent_json_${target}_${file})
+        add_dependencies(indent_${target} indent_${file})
 
     endforeach()
 endif()
