--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -34,6 +34,8 @@ install:
 before_build:
   - if DEFINED msvc_setup_path call "%msvc_setup_path%" %msvc_setup_arg%
   - set MASD_DOGEN_PROJECTS_DIRECTORY=%APPVEYOR_BUILD_FOLDER%\projects
+  - set MASD_CPP_REF_IMPL_PROJECTS_DIRECTORY=C:\third_party\ref_models\cpp_ref_impl-master\projects
+  - set MASD_CSHARP_REF_IMPL_SRC_DIRECTORY=C:\third_party\ref_models\csharp_ref_impl-master\Src
   - cd %APPVEYOR_BUILD_FOLDER%
 
 build_script:
