--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -422,8 +422,11 @@ if (DOGEN_CLI_EXECUTABLE)
     #
     # Options to use for all Dogen invocations
     #
-    set(DOGEN_LOG_LEVEL "debug")
-    set(DOGEN_LOG_OPTIONS --log-enabled --log-level ${DOGEN_LOG_LEVEL})
+
+    # uncomment to enable logging.
+    set(DOGEN_LOGGING_OPTIONS "")
+    # set(DOGEN_LOG_LEVEL "trace")
+    # set(DOGEN_LOGGING_OPTIONS --log-enabled --log-level ${DOGEN_LOG_LEVEL})
 
     set(DOGEN_TRACING_OPTIONS "")
     # uncomment to enable tracing.
@@ -444,7 +447,7 @@ if (DOGEN_CLI_EXECUTABLE)
     set(DOGEN_REPORTING_OPTIONS ${DOGEN_REPORTING_OPTIONS}
         --reporting-style org-mode )
 
-    set(DOGEN_COMMON_OPTIONS ${DOGEN_LOG_OPTIONS} ${DOGEN_TRACING_OPTIONS}
+    set(DOGEN_COMMON_OPTIONS ${DOGEN_LOGGING_OPTIONS} ${DOGEN_TRACING_OPTIONS}
         ${DOGEN_DIFFING_OPTIONS} ${DOGEN_REPORTING_OPTIONS})
 
     # uncomment the next line if you require compatibility support
