orchestration: output to temp directory on windows for long names
We are breaching the maximum path length on windows, so a quick hack
is required.

--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -19,7 +19,7 @@
 #
 
 # parameters for boost tests
-set(boost_test_parameters "--log_level=message")
+set(boost_test_parameters "--log_level=error")
 
 #
 # macro to create CTest tests for each boost unit tests
