cmake: do not include namespace name when adding boost test

--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -51,7 +51,9 @@ macro(add_boost_tests test_module)
             if (${test_name} IN_LIST boost_tests_ignore)
                 message(STATUS "Ignoring test: ${test_name}")
             else()
-                string(REPLACE "_tests.cpp" "_tests" test_suite ${cpp_file})
+                set(filename "")
+                get_filename_component(filename ${cpp_file} NAME)
+                string(REPLACE "_tests.cpp" "_tests" test_suite ${filename})
 
                 set(tests_cmd ${stage_bin_dir}/${test_module})
                 add_test(${test_module}/${test_suite}/${test_name}
